--- a/templates/home/admin_home.html
+++ b/templates/home/admin_home.html
@@ -4,7 +4,7 @@
         {% load static %}
         <link rel="stylesheet" href="{% static 'home/homeadminstyle.css' %}">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
-        <title>ADMIN HOME</title>
+        <title>Admin Home</title>
     <body>
         
         <div class="header">
@@ -29,9 +29,9 @@
             <nav class="buttons-box">
                 <div class="button-grid">
                     <a href="{% url 'admin_home' %}" class="buttons-tabs">Home</a>
-                    <a href="{% url 'admin_recents' %}" class="buttons-tabs">Recents</a>
+                    <a href="{% url 'admin_recents' %}" class="buttons-tabs">History</a>
                     <a href="{% url 'admin_unreturned' %}" class="buttons-tabs">Unreturned</a>
-                    <a href="{% url 'members' %}" class="buttons-tabs">Members</a>
+                    <a href="{% url 'members' %}" class="buttons-tabs">Users</a>
                     <a href="{% url 'admin_userprofile' %}" class="buttons-tabs">Account</a>
                     <a href="{% url 'logout' %}" class="buttons-tabs">Logout</a>
                 </div>
@@ -102,7 +102,10 @@
             </div>
 
         </div>
-             
+        <div id="popup" class="popup">
+            <span class="close-btn">&times;</span>
+            <p id="popup-message"></p>
+        </div>     
         <script defer src="{% static 'home/homeadminscript.js' %}"></script>
     </body>
 </html>
