--- a/templates/notification/notification.html
+++ b/templates/notification/notification.html
@@ -29,7 +29,7 @@
   <nav class="buttons-box">
       <div class="button-grid">
           <a href="{% url 'home' %}" class="buttons-tabs">Home</a>
-          <a href="{% url 'recents' %}" class="buttons-tabs">Recents</a>
+          <a href="{% url 'recents' %}" class="buttons-tabs">History</a>
           <a href="{% url 'unreturned' %}" class="buttons-tabs">Unreturned</a>
           <a href="{% url 'notification' %}" class="buttons-tabs">Notification</a>
           <a href="{% url 'userprofile' %}" class="buttons-tabs">Account</a>
