--- a/templates/recents/recents.html
+++ b/templates/recents/recents.html
@@ -4,7 +4,7 @@
     <head>
         <link rel="stylesheet" href="{% static 'recents/recentstyle.css' %}">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
-        <title>Faculty Recents</title>
+        <title>Faculty History</title>
     </head>
     <body>
         <div class="header">
@@ -32,7 +32,7 @@
             <div class="buttons-box">
                 <div class="button-grid">
                     <a href="{% url 'home' %}" class="buttons-tabs">Home</a>
-                    <a href="{% url 'recents' %}" class="buttons-tabs">Recents</a>
+                    <a href="{% url 'recents' %}" class="buttons-tabs">History</a>
                     <a href="{% url 'unreturned' %}" class="buttons-tabs">Unreturned</a>
                     <a href="{% url 'notification' %}" class="buttons-tabs">Notification</a>
                     <a href="{% url 'userprofile' %}" class="buttons-tabs">Account</a>
