--- a/templates/unreturned/unreturned.html
+++ b/templates/unreturned/unreturned.html
@@ -4,7 +4,7 @@
     <head>
         <link rel="stylesheet" href="{% static 'unreturned/unreturnedstyle.css' %}">
         <link rel="stylesheet" href="{% static 'unreturned/pop_up_form.css' %}">
-        <title>UNRETURNED</title>
+        <title>Faculty Unreturned</title>
     </head>
 
     <script defer src="{% static 'unreturned/buttons_for_unreturned.js' %}"></script>
@@ -35,7 +35,7 @@
             <div class="buttons-box">
                 <div class="button-grid">
                     <a href="{% url 'home' %}" class="buttons-tabs">Home</a>
-                    <a href="{% url 'recents' %}" class="buttons-tabs">Recents</a>
+                    <a href="{% url 'recents' %}" class="buttons-tabs">History</a>
                     <a href="{% url 'unreturned' %}" class="buttons-tabs">Unreturned</a>
                     <a href="{% url 'notification' %}" class="buttons-tabs">Notification</a>
                     <a href="{% url 'userprofile' %}" class="buttons-tabs">Account</a>
