--- a/templates/userprofile/userprofile.html
+++ b/templates/userprofile/userprofile.html
@@ -3,7 +3,7 @@
 <html>
     <head>
         <link rel="stylesheet" href="{% static 'userprofile/userprofile.css' %}">
-        <title>Faculty User Profile</title>
+        <title>Faculty Profile</title>
     </head>
     <body>
         <div class="header">
@@ -31,7 +31,7 @@
             <div class="buttons-box">
                 <div class="button-grid">
                     <a href="{% url 'home' %}" class="buttons-tabs">Home</a>
-                    <a href="{% url 'recents' %}" class="buttons-tabs">Recents</a>
+                    <a href="{% url 'recents' %}" class="buttons-tabs">History</a>
                     <a href="{% url 'unreturned' %}" class="buttons-tabs">Unreturned</a>
                     <a href="{% url 'notification' %}" class="buttons-tabs">Notification</a>
                     <a href="{% url 'userprofile' %}" class="buttons-tabs">Account</a>
