--- a/static/home/homeadminstyle.css
+++ b/static/home/homeadminstyle.css
@@ -1673,7 +1673,7 @@ button:hover {
   flex-direction: column; 
   border: 2px solid rgb(171, 177, 177);
   border-radius: 6px;
-  height: 150px;
+  height: 175px;
   width: 130px;
   padding-top: 10px;
   padding-left: 10px;
@@ -1682,6 +1682,15 @@ button:hover {
   margin-left:10px;
   background-color: rgb(255, 255, 255);
   flex-shrink: 0;
+}
+
+.box img {
+  margin-left: 14px;
+}
+.box button {
+  display: flex;
+  align-items: center;
+  margin-left: 20px;
 }
 .result-button{
   margin-left:10px;
@@ -1762,7 +1771,40 @@ button:hover {
   align-content: center;
   gap: 1em;
 }
-
+.popup {
+  display: none;
+  position: fixed;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%) scale(0.8);
+  padding: 20px;
+  background-color: white;
+  border: 2px solid black;
+  z-index: 1000;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  transition: transform 0.3s ease, opacity 0.3s ease;
+  opacity: 0;
+}
+.popup.active {
+  display: block;
+  transform: translate(-50%, -50%) scale(1);
+  opacity: 1;
+}
+.popup .close-btn {
+  float: right;
+  cursor: pointer;
+  font-size: 1.2em;
+  font-weight: bold;
+  color: #333;
+}
+.popup .close-btn:hover {
+  color: #666;
+}
+.popup p {
+  margin: 0;
+  font-size: 1em;
+  color: #333;
+}
   @media screen and (max-width: 768px) {
     header {
       flex-direction: column;
