--- a/static/members/memberstyle.css
+++ b/static/members/memberstyle.css
@@ -323,21 +323,42 @@ body {
 
 
 .user_info {
+  position: fixed;
+  top: 40%;
+  left: 31%;
+  transform: translate(-50%, -50%) scale(0);
+  transition: transform 200ms ease-in-out;
+  border: 1px solid black;
+  border-radius: 10px;
+  z-index: 10;
+  background-color: white;
+  width: 500px; /* Width of the popup */
+  max-width: 80%;
+  padding: 20px; /* Inner padding */
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+.user_info.active {
+    transform: translateY(-50%) scale(1);
+}
+
+.user_borrowed_info {
     position: fixed;
     top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%) scale(0);
-    transition: 200ms ease-in-out;
+    left: 320px; 
+    transform: translateY(-50%) scale(0);
+    transition: transform 200ms ease-in-out;
     border: 1px solid black;
     border-radius: 10px;
     z-index: 10;
     background-color: white;
-    width: 500px;
+    width: 200px; 
     max-width: 80%;
+    margin-left: 20px; 
 }
 
-.user_info.active {
-    transform: translate(-50%, -50%) scale(1);
+.user_borrowed_info.active {
+    transform: translateY(-50%) scale(1);
 }
 
 #user_info button {
@@ -345,34 +366,26 @@ body {
   color: black;
   border-radius: 5px;
   cursor: pointer;
-  margin-left: 430px;
+  margin-left: auto;
+  margin-right: 10px;
   margin-bottom: 10px;
   padding: 5px;
 }
 
-#user_info button:hover{
-  color: orange;
+#user_info button:hover {
+    color: orange;
 }
 
-#user_info p{
-  margin-top: 5px;
-  margin-left: 10px;
-  font-weight: bold;
-  align-items: center;
-  display: flex;
-  padding-top: 5px;
+#user_info p {
+    margin-top: 5px;
+    margin-left: 10px;
+    font-weight: bold;
+    align-items: center;
+    display: flex;
+    padding-top: 5px;
 }
 
 .user-button {
-  background-color:#dee2e6;
-  color: black;
-  padding: 10px;
-  border: none;
-  cursor: pointer;
-  margin-right: 10px;
-}
-
-.users button{
   text-align: center;
   width: 150px;
   height: 150px;
@@ -382,9 +395,19 @@ body {
   font-size: large;
 }
 
+.users button {
+    text-align: center;
+    width: 150px;
+    height: 150px;
+    border-radius: 15px;
+    cursor: pointer;
+    margin-right: 30px;
+    font-size: large;
+}
+
 .users button:hover {
-  background-color: orange;  
-  color: white;  
+    background-color: orange;
+    color: white;
 }
 
 @media only screen and (max-width: 768px) {
@@ -423,7 +446,7 @@ body {
   border-radius: 10px;
   z-index: 10;
   background-color: white;
-  width: 1000px;
+  width: 300px;
   max-width: 80%;
 }
 
