--- a/templates/login/login.html
+++ b/templates/login/login.html
@@ -3,7 +3,7 @@
     <head>
         {% load static %}
         <link rel="stylesheet" href="{% static 'login/loginstyle.css' %}">
-        <title>LOGIN</title>
+        <title>Inventory System Login</title>
        
         {% for message in messages %}
         <div class="alert alert-{{ message.tags }} alert-dismissible fade show" role="alert">
