--- a/templates/userprofile/editprofile.html
+++ b/templates/userprofile/editprofile.html
@@ -3,7 +3,7 @@
 <html>
     <head>
         <link rel="stylesheet" href="{% static 'userprofile/userprofile.css' %}">
-        <title>EDIT USER PROFILE</title>
+        <title>Edit Profile</title>
     </head>
 <body>
 
@@ -32,7 +32,7 @@
         <div class="buttons-box">
             <div class="button-grid">
                 <a href="{% url 'home' %}" class="buttons-tabs">Home</a>
-                <a href="{% url 'recents' %}" class="buttons-tabs">Recents</a>
+                <a href="{% url 'recents' %}" class="buttons-tabs">History</a>
                 <a href="{% url 'unreturned' %}" class="buttons-tabs">Unreturned</a>
                 <a href="{% url 'notification' %}" class="buttons-tabs">Notification</a>
                 <a href="{% url 'userprofile' %}" class="buttons-tabs">Account</a>
